@@ -9,9 +9,10 @@ tasks.whenTaskAdded { task ->
 apply plugin: 'java'
 apply plugin: 'application'
 
-// JDK 8
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 mainClassName = 'edu.mcw.rgd.QC'
 String myAppName = 'data-qc-pipeline'
 
@@ -26,9 +27,9 @@ dependencies {
     implementation 'commons-net:commons-net:3.9.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.6.0.0'
-    implementation 'org.springframework:spring-beans:5.3.2'
-    implementation 'org.springframework:spring-jdbc:5.3.2'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
+    implementation 'org.springframework:spring-beans:5.3.3'
+    implementation 'org.springframework:spring-jdbc:5.3.3'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
