@@ -2,6 +2,6 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.QC">
-        <property name="version" value="--Data QC pipeline   -- build Aug 30, 2023" />
+        <property name="version" value="--Data QC pipeline   -- build Sep 28, 2023" />
     </bean>
 </beans>
