@@ -89,6 +89,17 @@
             <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
         </File>
 
+        <RollingFile name="duplicate_variants" append="true" fileName="logs/duplicate_variants.log" filePattern="logs/duplicate_variants.log.%d{yyyy-MM}">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
+        <File name="duplicate_variants_simple" append="false" fileName="logs/duplicate_variants_simple.log">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] %m%n"/>
+            <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
+        </File>
+
         <RollingFile name="rrrc_ids" append="true" fileName="logs/rrrc_ids.log" filePattern="logs/rrrc_ids.log.%d{yyyy-MM}">
             <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
             <Policies>
@@ -150,6 +161,10 @@
         <Logger name="duplicate_alleles" level="debug" additivity="false">
             <AppenderRef ref="duplicate_alleles_simple"/>
             <AppenderRef ref="duplicate_alleles"/>
+        </Logger>
+        <Logger name="duplicate_variants" level="debug" additivity="false">
+            <AppenderRef ref="duplicate_variants_simple"/>
+            <AppenderRef ref="duplicate_variants"/>
         </Logger>
 
         <Logger name="deleted_aliases" level="debug" additivity="false">
